// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Init 1`] = `
Object {
  "_node": Object {
    "_name": "node",
  },
  "initialize": [Function],
  "onAdd": [Function],
  "onRemove": [Function],
  "options": Object {
    "className": "playground-item",
    "highlightColor": "grey",
  },
  "remove": [Function],
}
`;

exports[`App remove 1`] = `
Object {
  "_node": undefined,
  "initialize": [Function],
  "onAdd": [Function],
  "onRemove": [Function],
  "options": Object {
    "className": "playground-item",
    "highlightColor": "grey",
  },
  "remove": [Function],
}
`;
